<resources>
    <string name="app_name">Mint</string>
    <string name="back">back</string>
    <string name="enter">Enter</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="sum">Sum</string>
    <string name="comment">Comment</string>
    <string name="operation">Operation</string>
    <string name="operations">Operations</string>
    <string name="category">Category</string>
    <string name="plus">+</string>
    <string name="save_operation">Save operation</string>
    <string name="save_category">Save category</string>
    <string name="category_name">Category name</string>
    <string name="new_operation">New operation</string>
    <string name="new_category">New category</string>
    <string name="alt_point">•</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="digit_zero">0</string>
    <string name="instruction_enter_pin_code">Enter the pin code</string>
    <string name="it_must_contain_5_digits">It must contain 5 digits</string>
    <string name="instruction_create_pin_code">Create a pin code</string>
    <string name="instruction_confirm_pin_code">Confirm pin code</string>
    <string name="error_incorrect_pin_code">Incorrect pin code</string>
    <string name="error_pin_code_does_not_match">Pin code does not match</string>
    <string name="error_pin_code_less_than_5">Pin code contains less than 5 numbers</string>
    <string name="photo">Photo</string>
    <string name="select_photo">select photo</string>
</resources>