<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.PinCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/golostext_medium"
            android:text="@string/app_name"
            android:textColor="@color/white_gray"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/golostext_regular"
            android:textColor="@color/gray"
            android:text="@string/instruction_enter_pin_code"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPinCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/golostext_regular"
            android:textColor="@color/white_gray"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/golostext_regular"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:columnCount="3"
            android:rowCount="4">

            <Button
                android:id="@+id/buttonOne"
                android:tag="1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_one"/>

            <Button
                android:id="@+id/buttonTwo"
                android:tag="2"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_two" />

            <Button
                android:id="@+id/buttonThree"
                android:tag="3"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_three" />

            <Button
                android:id="@+id/buttonFour"
                android:tag="4"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_four" />

            <Button
                android:id="@+id/buttonFive"
                android:tag="5"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_five" />

            <Button
                android:id="@+id/buttonSix"
                android:tag="6"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_six" />

            <Button
                android:id="@+id/buttonSeven"
                android:tag="7"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_seven" />

            <Button
                android:id="@+id/buttonEight"
                android:tag="8"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_eight" />

            <Button
                android:id="@+id/buttonNine"
                android:tag="9"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_nine" />

            <Button
                android:id="@+id/buttonEmpty"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                tools:visibility="invisible" />

            <Button
                android:id="@+id/buttonZero"
                android:tag="0"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:textColor="@color/white_gray"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="numberEnter"
                android:text="@string/digit_zero" />

            <Button
                android:id="@+id/buttonBackspace"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/back"
                android:textColor="@color/white_gray"
                android:textSize="22sp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/golostext_regular"
                android:onClick="backspacePress"/>

        </GridLayout>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white_gray"
            android:background="@android:color/transparent"
            android:fontFamily="@font/golostext_regular"
            android:onClick="enter"
            android:text="@string/enter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>